--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.0",
+    "@jsverse/transloco": "^7.4.2",
+    "@ngneat/transloco": "^6.0.4",
+    "chroma-js": "^2.4.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
