--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-template",
+  "name": "admin-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:admin-template": "node dist/admin-template/server/server.mjs"
+    "serve:ssr:admin-angular": "node dist/admin-angular/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -23,8 +23,6 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.0",
-    "@jsverse/transloco": "^7.4.2",
-    "@ngneat/transloco": "^6.0.4",
     "chroma-js": "^2.4.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
